syntax = "proto3";

package yandex.cloud.priv.infra.opsmanager.v2;

import "yandex/cloud/priv/compute/v1/admin/node.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/infra/opsmanager/v2;opsmanager";

message WallEHost {
  string name = 1;
  string project = 2;
  string state = 3;
  string status = 4;
}

message K8SNode {
  map<string, string> labels = 1;
}

message Host {
  string fqdn = 1;
  WallEHost walle_host = 2;
  yandex.cloud.priv.compute.v1.admin.Node compute_node = 3;
  K8SNode k8s_node = 4;
}
